@@ -37,6 +37,7 @@ public:
     static void addModulePragma(const string& module, VPragmaType pragma);
     static void addProfileData(FileLine* fl, const string& model, const string& key,
                                uint64_t cost);
+    static void addScopeTraceOn(bool on, const string& scope, int levels);
     static void addVarAttr(FileLine* fl, const string& module, const string& ftask,
                            const string& signal, VAttrType type, AstSenTree* nodep);
     static void addWaiver(V3ErrorCode code, const string& filename, const string& message);
@@ -50,6 +51,7 @@ public:
 
     static uint64_t getProfileData(const string& model, const string& key);
     static FileLine* getProfileDataFileLine();
+    static bool getScopeTraceOn(const string& scope);
     static bool waive(FileLine* filelinep, V3ErrorCode code, const string& message);
 };
 
