@@ -7,4 +7,12 @@
 `verilator_config
 
 public -module "t" @(posedge clk)
+// only signals/functions/tasks
 isolate_assignments -module "t"
+// -match not supported
+tracing_off --file "*" -match "nothing"
+// -scope not supported
+lint_off --rule UNOPTFLAT -scope "top*"
+lint_off --rule UNOPTFLAT -scope "top*" -levels 0
+lint_on --rule UNOPTFLAT -scope "top*"
+lint_on --rule UNOPTFLAT -scope "top*" -levels 0
