@@ -13,6 +13,7 @@ Verilator 4.223 devel
 
 **Minor:**
 
+* Support compile time trace signal selection with tracing_on/off (#3323). [Shunyao CAD]
 * Fix hang with large case statement optimization (#3405). [Mike Urbach]
 
 
